I added images to Stage select

--- a/stage-select.html
+++ b/stage-select.html
@@ -6,16 +6,24 @@
   	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Title Screen</title>
+		<title>Stage Select</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/stage-select.css">
 	</head>
 	<body>
-		<h1>Violent Paradise</h1>
+        <div id="SelectBoxes">
+            <div id="LeftBox">
+                <img id="Stage-1" src="assets\Stage1Select.png">
+            </div>
+
+            <div id="RightBox">
+                <img id="Stage-2" src="assets\Stage2Select.png">
+            </div>
+
+        </div>
 		
-		<a href="/character-select.html"><button id="startButton">Press Start</button></a>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
