--- a/character-select.html
+++ b/character-select.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<div id="selectScreenBox1">
-			<div id="character"></div>
+			<canvas id="characterSelectAnimation"></canvas>
 			
 
 		
