Working towards mouse over event

--- a/character-select.html
+++ b/character-select.html
@@ -24,21 +24,21 @@
 				<h1>SELECT</h1>
 			</div>
 			<div id="characterGrid">
-				<img id="StriderSelect" src="/assets/striderSelect.png">
-				<img id="JinSelect" src="/assets/JinSelect.png">
-				<img id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
-				<img id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
-				<img id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
-				<img id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
-				<img id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
-				<img id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
-				<img id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
-				<img id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
-				<img id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
-				<img id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
-				<img id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
-				<img id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
-				<img id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
+				<img class="Character" id="StriderSelect" src="/assets/striderSelect.png">
+				<img class="Character" id="JinSelect" src="/assets/JinSelect.png">
+				<img class="Character" id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
+				<img class="Character" id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
+				<img class="Character" id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
+				<img class="Character" id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
+				<img class="Character" id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
+				<img class="Character" id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
+				<img class="Character" id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
+				<img class="Character" id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
+				<img class="Character" id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
+				<img class="Character" id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
+				<img class="Character" id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
+				<img class="Character" id="SaskueCharacterSelectImg" src="/assets/SaskueCharacterSelect.png">
+				<img class="Character" id="ActionBronsonCharacterSelectImg" src="/assets/ActionBronsonSelect.png">
 			</div>
 			<div id="selectGridFooter">
 				<h2>YOUR FIGHTER</h2>
